--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <!-- шапка -->
 
-    <header class="header">
+    <header class="header block-margin-bottom-100">
       <div class="logo logo_place_header"></div>
       <h1 class="header__title">Научиться учиться</h1>
       <p class="header__subtitle">
@@ -32,7 +32,7 @@
 
       <!-- секция description -->
 
-      <section class="description block-margin-top block-margin-bottom">
+      <section class="description block-margin-bottom-100">
         <div class="two-columns">
           <h2 class="two-columns__brief">Главные проблемы в обучении</h2>
           <div class="two-columns__main-text">
@@ -56,32 +56,155 @@
 
       <!-- секция techniques -->
 
-      <section class="techniques">
-
+      <section class="techniques centered-block block-margin-bottom-100">
+        <h2 class="section-title centered-block block-margin-bottom-20">Техники обучения</h2>
+        <p class="section-subtitle centered-block">Пять практик от Барбары Оакли</p>
+        <div class="cards centered-block">
+          <div class="cards__item">
+            <img class="cards__image" src="./images/cards-attention.png" alt="Два вида внимания">
+            <h3 class="cards__title">Два вида внимания</h3>
+            <p class="cards__description">Глубокие знания возникают, если чередовать сфокусированное и рассеянное мышление.</p>
+          </div>
+          <div class="cards__item">
+            <img class="cards__image" src="./images/cards-recall.png" alt="Recall">
+            <h3 class="cards__title">Recall</h3>
+            <p class="cards__description">Вспоминайте изученное — это позволит соединить разрозненные порции памяти.</p>
+          </div>
+          <div class="cards__item">
+            <img class="cards__image" src="./images/cards-interliving.png" alt="Интерливинг">
+            <h3 class="cards__title">Интерливинг</h3>
+            <p class="cards__description">Изучайте несколько навыков одновременно, они обогащают друг друга.</p>
+          </div>
+          <div class="cards__item">
+            <img class="cards__image" src="./images/cards-question.png" alt="Вопросы">
+            <h3 class="cards__title">Вопросы</h3>
+            <p class="cards__description">Слушая преподавателя, придумывайте хороший вопрос, который вас действительно волнует.</p>
+          </div>
+          <div class="cards__item">
+            <img class="cards__image" src="./images/cards-competence.png" alt="Иллюзия компетентности">
+            <h3 class="cards__title">Иллюзия компетентности</h3>
+            <p class="cards__description">Повторите про себя, запишите, расскажите другу: вам только кажется, что вы владеете новой темой.</p>
+          </div>
+        </div>
       </section>
 
       <!-- конец секции techniques -->
 
       <!-- секция digits -->
 
-      <section class="digits">
-
+      <section class="digits centered-block block-margin-bottom-100">
+        <h2 class="section-title centered-block block-margin-bottom-20">Цифры и факты</h2>
+        <p class="section-subtitle centered-block">Про учёбу и мозг</p>
+        <div class="table centered-block">
+          <div class="table__cell">
+            <h3 class="table__heading">86 миллиардов</h3>
+            <p class="table__text">Число нейронов в мозге человека</p>
+          </div>
+          <div class="table__cell">
+            <h3 class="table__heading">2.1 миллиарда</h3>
+            <p class="table__text">Число нуждающихся в повышении квалификации</p>
+            <p class="table__text">Всемирный Банк, 2017</p>
+          </div>
+          <div class="table__cell">
+            <h3 class="table__heading">1000 терабайт</h3>
+            <p class="table__text">Объём памяти человека</p>
+          </div>
+          <div class="table__cell">
+            <h3 class="table__heading">500 триллионов</h3>
+            <p class="table__text">Число ответственных за обучение нервных синапсов у взрослого человека</p>
+          </div>
+          <div class="table__cell">
+            <h3 class="table__heading">420 миллионов</h3>
+            <p class="table__text">Число взрослых людей моложе 25 лет, не имеющих образования для трудоустройства</p>
+            <p class="table__text">Всемирный Банк, 2017</p>
+          </div>
+          <div class="table__cell">
+            <h3 class="table__heading">17–20 лет</h3>
+            <p class="table__text">Пик обучаемости</p>
+          </div>
+          <div class="table__cell">
+            <h3 class="table__heading">1885 год</h3>
+            <p class="table__text">Открытие кривой забывания</p>
+          </div>
+          <div class="table__cell">
+            <h3 class="table__heading">1889 год</h3>
+            <p class="table__text">Открытие условного рефлекса</p>
+          </div>
+        </div>
       </section>
 
       <!-- конец секции digits -->
 
       <!-- секция kaufman -->
 
-      <section class="kaufman">
-
+      <section class="kaufman centered-block block-margin-bottom-100">
+        <h2 class="section-title section-title_theme_dark centered-block block-margin-bottom-20">Принципы обучения</h2>
+        <p class="section-subtitle section-subtitle_theme_dark centered-block">от Джоша Кауфмана</p>
+        <div class="table table_theme_dark centered-block">
+          <div class="table__cell table__cell_theme_dark">
+            <h3 class="table__heading table__heading_theme_dark">1</h3>
+            <p class="table__text table__text_theme_dark">Выберите привлекательный проект.</p>
+          </div>
+          <div class="table__cell table__cell_theme_dark">
+            <h3 class="table__heading table__heading_theme_dark">2</h3>
+            <p class="table__text table__text_theme_dark">Сосредоточьтесь на каком-то одном навыке.</p>
+          </div>
+          <div class="table__cell table__cell_theme_dark">
+            <h3 class="table__heading table__heading_theme_dark">3</h3>
+            <p class="table__text table__text_theme_dark">Определите целевой уровень мастерства.</p>
+          </div>
+          <div class="table__cell table__cell_theme_dark">
+            <h3 class="table__heading table__heading_theme_dark">4</h3>
+            <p class="table__text table__text_theme_dark">Разбейте навык на элементы.</p>
+          </div>
+          <div class="table__cell table__cell_theme_dark">
+            <h3 class="table__heading table__heading_theme_dark">5</h3>
+            <p class="table__text table__text_theme_dark">Приготовьте всё необходимое для занятий.</p>
+          </div>
+          <div class="table__cell table__cell_theme_dark">
+            <h3 class="table__heading table__heading_theme_dark">6</h3>
+            <p class="table__text table__text_theme_dark">Устраните препятствия для занятий.</p>
+          </div>
+          <div class="table__cell table__cell_theme_dark">
+            <h3 class="table__heading table__heading_theme_dark">7</h3>
+            <p class="table__text table__text_theme_dark">Выделите специальное время для занятий.</p>
+          </div>
+          <div class="table__cell table__cell_theme_dark">
+            <h3 class="table__heading table__heading_theme_dark">8</h3>
+            <p class="table__text table__text_theme_dark">Создайте быстрые петли обратной связи.</p>
+          </div>
+          <div class="table__cell table__cell_theme_dark">
+            <h3 class="table__heading table__heading_theme_dark">9</h3>
+            <p class="table__text table__text_theme_dark">Занимайтесь по расписанию, короткими интенсивными интервалами.</p>
+          </div>
+          <div class="table__cell table__cell_theme_dark">
+            <h3 class="table__heading table__heading_theme_dark">10</h3>
+            <p class="table__text table__text_theme_dark">Уделяйте внимание количеству и скорости.</p>
+          </div>
+        </div>
       </section>
 
       <!-- конец секции kaufman -->
 
       <!-- секция resources -->
 
-      <section class="resources">
-
+      <section class="resources centered-block">
+        <h2 class="section-title centered-block block-margin-bottom-20">Полезные ресурсы</h2>
+        <p class="section-subtitle centered-block">Больше материалов о техниках и лайфхаках обучения</p>
+        <div class="resources__logo-zone">
+          <a class="resources__link" href="#">
+            <div class="resources__logo resources__logo_firm_arzamas"></div>
+          </a>
+          <a class="resources__link" href="#">
+            <div class="resources__logo resources__logo_firm_n1"></div>
+          </a>
+          <a class="resources__link" href="#">
+            <div class="resources__logo resources__logo_firm_strelka"></div>
+          </a>
+          <a class="resources__link" href="#">
+            <div class="resources__logo resources__logo_firm_polka"></div>
+          </a>
+        </div>
       </section>
 
       <!-- конец секции resources -->
@@ -92,8 +215,47 @@
 
     <!-- подвал -->
 
-    <footer class="footer">
-
+    <footer class="footer centered-block">
+      <div class="footer__columns centered-block">
+        <div class="footer__column footer__column_content_copyright">
+          <div class="logo logo_place_footer"></div>
+          <p class="footer__author">&copy; Виктор Абанькин</p>
+        </div>
+        <div class="footer__column footer__column_content_info">
+          <h3 class="footer__column-heading">О практикуме</h3>
+          <ul class="footer__column-links">
+            <li>
+              <a class="footer__column-link" href="#">Главная</a>
+            </li>
+            <li>
+              <a class="footer__column-link" href="#">Концепция</a>
+            </li>
+            <li>
+              <a class="footer__column-link" href="#">Наставники</a>
+            </li>
+          </ul>
+        </div>
+        <div class="footer__column footer__column_content_social">
+          <h3 class="footer__column-heading">Соцсети</h3>
+          <ul class="footer__column-links">
+            <li>
+              <a class="footer__column-link" href="#">
+                <img class="footer__social-icon" src="./images/facebook_color_white.svg" alt="Фейсбук"> Facebook
+              </a>
+            </li>
+            <li>
+              <a class="footer__column-link" href="#">
+                <img class="footer__social-icon" src="./images/vk_color_white.svg" alt="Вконтакте"> ВКонтакте
+              </a>
+            </li>
+            <li>
+              <a class="footer__column-link" href="#">
+                <img class="footer__social-icon" src="./images/instagram_color_white.svg" alt="Инстаграм"> Instagram
+              </a>
+            </li>
+          </ul>
+        </div>
+      </div>
     </footer>
 
   </div>
