--- a/index.html
+++ b/index.html
@@ -4,13 +4,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./pages/index.css">
+  <link rel="stylesheet" href="./fonts/fonts.css">
   <title>Научиться учиться</title>
 </head>
-<body class="body">
-
-  <!-- обертка -->
-
-  <div class="page centered-block">
+<body class="page centered-block">
 
     <!-- шапка -->
 
@@ -18,10 +15,10 @@
       <div class="logo logo_place_header"></div>
       <h1 class="header__title">Научиться учиться</h1>
       <p class="header__subtitle">
-        Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни?<a class="header__link" href="#"> Узнать →</a>
+        Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни?<a class="header__link opacity-link" href="#"> Узнать →</a>
       </p>
       <div class="header__main-illustration"></div>
-      <div class="header__square-pic"></div>
+      <div class="header__square-pic figure-rotate"></div>
     </header>
 
     <!-- тут шапка кончилась -->
@@ -90,6 +87,46 @@
 
       <!-- конец секции techniques -->
 
+      <!-- секция video -->
+
+      <section class="video centered-block">
+        <h2 class="section-title centered-block block-margin-bottom-20">Видео на TED</h2>
+        <p class="section-subtitle centered-block">Для тех, кто любит прокрастинировать</p>
+        <div class="video__iframes">
+          <iframe class="video__iframe" src="https://www.youtube.com/watch?v=arj7oStGLkU" width="515px" height="316px" frameborder="0"></iframe>
+          <iframe class="video__iframe" src="https://www.youtube.com/watch?v=5MgBikgcWnY" width="515px" height="316px" frameborder="0"></iframe>
+        </div>
+      </section>
+
+      <!-- конец секции video -->
+
+      <!-- секция oakley -->
+
+      <section class="oakley">
+        <div class="two-columns">
+          <h2 class="two-columns__brief">История Барбары Оакли.</h2>
+          <div class="two-columns__main-text">
+            <p class="two-columns__paragraph">
+              С детства Барбаре не давалась математика. Она считала себя законченным гуманитарием, причём далеко не самым умным.
+              В армии она изучала русский язык, чтобы получить надбавку, да так успешно, что её выдвинули в командиры.
+              Но для продвижения по службе нужно было сдавать математику. И тогда Барбара придумала свой подход к точным наукам.
+              Оказалось, если вам что-то «плохо даётся», ваши добытые трудом знания гораздо глубже, чем у тех, кому всё ясно с первого взгляда.
+            </p>
+      </section>
+
+      <!-- конец секции oakley -->
+
+      <!-- секция feynman -->
+
+      <section class="feynman block-margin-bottom-100">
+        <div class="feynman__image"></div>
+        <h2 class="feynman__title centered-block">Метод Фейнмана</h2>
+        <p class="feynman__subtitle">Выучить и не забыть</p>
+        <a class="feynman__link opacity-link" href="#">Подробнее →</a>
+      </section>
+
+      <!-- конец секции feynman -->
+
       <!-- секция digits -->
 
       <section class="digits centered-block block-margin-bottom-100">
@@ -134,6 +171,27 @@
       </section>
 
       <!-- конец секции digits -->
+
+      <!-- секция khan -->
+
+      <section class="khan centered-block">
+        <div class="khan__container centered-block">
+          <p class="khan__author">Салман Хан</p>
+          <h2 class="khan__title">Весь мир - школа</h2>
+          <p class="khan__quote">
+            Страсть и новаторство Сала Хана меняют процесс обучения миллионов студентов по всему миру. Книгу «Весь мир — школа» нужно прочитать всем,
+            кто занимается образованием — так учащиеся повсюду смогут получить навыки и знания, которые приносят успех в школе, карьере и жизни.
+          </p>
+          <p class="khan__quote-author">Джордж Лукас</p>
+          <p class="khan__quote-author-subline">Кинорежиссёр, продюссер</p>
+          <div class="khan__book-container">
+            <div class="khan__book-pic"></div>
+            <a class="khan__buy-link opacity-link" href="#">Купить книгу →</a>
+          </div>
+        </div>
+      </section>
+
+      <!-- конец секции khan -->
 
       <!-- секция kaufman -->
 
@@ -182,6 +240,7 @@
             <p class="table__text table__text_theme_dark">Уделяйте внимание количеству и скорости.</p>
           </div>
         </div>
+        <div class="kaufman__triangle figure-rotate"></div>
       </section>
 
       <!-- конец секции kaufman -->
@@ -192,16 +251,16 @@
         <h2 class="section-title centered-block block-margin-bottom-20">Полезные ресурсы</h2>
         <p class="section-subtitle centered-block">Больше материалов о техниках и лайфхаках обучения</p>
         <div class="resources__logo-zone">
-          <a class="resources__link" href="#">
+          <a class="resources__link opacity-link" href="#">
             <div class="resources__logo resources__logo_firm_arzamas"></div>
           </a>
-          <a class="resources__link" href="#">
+          <a class="resources__link opacity-link" href="#">
             <div class="resources__logo resources__logo_firm_n1"></div>
           </a>
-          <a class="resources__link" href="#">
+          <a class="resources__link opacity-link" href="#">
             <div class="resources__logo resources__logo_firm_strelka"></div>
           </a>
-          <a class="resources__link" href="#">
+          <a class="resources__link opacity-link" href="#">
             <div class="resources__logo resources__logo_firm_polka"></div>
           </a>
         </div>
@@ -225,13 +284,13 @@
           <h3 class="footer__column-heading">О практикуме</h3>
           <ul class="footer__column-links">
             <li>
-              <a class="footer__column-link" href="#">Главная</a>
+              <a class="footer__column-link opacity-link" href="#">Главная</a>
             </li>
             <li>
-              <a class="footer__column-link" href="#">Концепция</a>
+              <a class="footer__column-link opacity-link" href="#">Концепция</a>
             </li>
             <li>
-              <a class="footer__column-link" href="#">Наставники</a>
+              <a class="footer__column-link opacity-link" href="#">Наставники</a>
             </li>
           </ul>
         </div>
@@ -239,17 +298,17 @@
           <h3 class="footer__column-heading">Соцсети</h3>
           <ul class="footer__column-links">
             <li>
-              <a class="footer__column-link" href="#">
+              <a class="footer__column-link opacity-link" href="#">
                 <img class="footer__social-icon" src="./images/facebook_color_white.svg" alt="Фейсбук"> Facebook
               </a>
             </li>
             <li>
-              <a class="footer__column-link" href="#">
+              <a class="footer__column-link opacity-link" href="#">
                 <img class="footer__social-icon" src="./images/vk_color_white.svg" alt="Вконтакте"> ВКонтакте
               </a>
             </li>
             <li>
-              <a class="footer__column-link" href="#">
+              <a class="footer__column-link opacity-link" href="#">
                 <img class="footer__social-icon" src="./images/instagram_color_white.svg" alt="Инстаграм"> Instagram
               </a>
             </li>
@@ -258,9 +317,7 @@
       </div>
     </footer>
 
-  </div>
-
-  <!-- конец обертки -->
+  <!-- конец подвала -->
 
 </body>
 </html>
